add exception and role
